welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: missing arguments for method abs in package math;
follow this method with `_' if you want to treat it as a partially applied function
	if ( (nums(k+1) == (nums(k)+5)) && ( (  math.abs( (nums(k+2) -  (nums(k)))) <=1)   ||  (  math.abs( math.abs((nums(k+2))) -  (nums(k))) =1) ))
                                                                                                       ^